--- a/doc/A-M_APDL_reference.org
+++ b/doc/A-M_APDL_reference.org
@@ -1,4 +1,3 @@
-#+DATE: Time-stamp: <2021-10-02>
 #+bind: org-html-preamble-format (("en" "%d"))
 # #+TITLE:  APDL-Mode Highlighting and APDL Reference
 # #####################################################################
@@ -871,7 +870,7 @@ c
 #+end_src
 *** _RETURN values of macros
 #+begin_src apdl
-  *return                  !TODO: what is this?
+  *return,1                ! return from loops (to level 1)
   *status,_RETURN          !0 normal
                            !1 note
                            !2 warning
@@ -1166,6 +1165,4 @@ and you are getting a diffent element highlighting.
 # word-wrap: t
 # show-trailing-whitespace: t
 # indicate-empty-lines: t
-# time-stamp-active: t
-# time-stamp-format: "%:y-%02m-%02d"
 # end:
